Dramatically improve website template and fix poller reload bug

--- a/frontend/public/templateProjects/Website/index.html
+++ b/frontend/public/templateProjects/Website/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hi, I'm [Your Name]! 👋</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>Hello, world!</h1>
-  <p>Birds are cool.</p>
+
+<body class="website-template">
+  <header>
+    <nav>
+      <div class="logo">🌟 [Your Name]</div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#fun">Fun Stuff</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="home" class="hero">
+      <h1>Hey there! 👋</h1>
+      <p>I'm [Your Name] and this is my little corner of the internet.</p>
+      <a href="#about" class="cta-button">Get to know me</a>
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <div class="about-content">
+        <p>I'm a human who does stuff. Sometimes I code, sometimes I don't. 🤷‍♂️</p>
+
+        <div class="fun-facts">
+          <h3>Fun Facts About Me:</h3>
+          <ul>
+            <li>🎵 I listen to music (shocking, I know)</li>
+            <li>☕ I drink coffee like it's going out of style</li>
+            <li>🐕 I have a pet (or wish I did)</li>
+            <li>🌮 Tacos are life</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="fun">
+      <h2>Fun Stuff I Like</h2>
+      <div class="fun-grid">
+        <div class="fun-card">
+          <h3>🎮 Gaming</h3>
+          <p>I play video games when I should be doing other things.</p>
+        </div>
+
+        <div class="fun-card">
+          <h3>📚 Reading</h3>
+          <p>Books are cool. I read them sometimes.</p>
+        </div>
+
+        <div class="fun-card">
+          <h3>🏃‍♂️ Hiking</h3>
+          <p>Nature is pretty. I go outside occasionally.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>Thanks for visiting my website! ✨</p>
+    <div class="social-links">
+      <a href="#" title="Twitter">🐦</a>
+      <a href="#" title="Instagram">📸</a>
+      <a href="#" title="GitHub">💻</a>
+    </div>
+    <p><small>Made with ❤️ and probably some caffeine</small></p>
+  </footer>
 </body>
+
 </html>
